--- a/index.html
+++ b/index.html
@@ -5,40 +5,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Prestasi Moklet</title>
+    <style>
+        /* Menyembunyikan radio button */
+        input[type="radio"] {
+            display: none;
+        }
+
+        /* Menyembunyikan semua video */
+        .video-container {
+            display: none;
+        }
+
+        /* Menampilkan video yang sesuai dengan radio button yang dipilih */
+        input[type="radio"]:checked + .video-container {
+            display: block;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- header -->
+    <!-- Header -->
     <header class="bg-green-800 h-16 flex items-center justify-center">
         <h1 class="text-white text-lg font-semibold">Prestasi Moklet</h1>
     </header>
-    <!-- end header -->
+    <!-- End Header -->
 
     <!-- Container Utama -->
-    <div class="flex flex-col lg:flex-row w-full min-h-screen bg-gray-200 p-4">
-
+    <div class="flex flex-col lg:flex-row w-full  bg-gray-200 p-4">
 
         <!-- Video Section -->
         <div class="w-full lg:w-3/4">
-            <iframe class="w-full h-[800px] lg:h-[700px]"
-                src="https://www.youtube.com/embed/Fp5ghKduTK8" title="Prestasi Moklet"
-                allowfullscreen>
-            </iframe>
-        </div>
+            <input type="radio" name="video" id="video1" checked>
+            <div class="video-container">
+                <iframe class="w-full h-[500px] lg:h-[600px]" 
+                    src="https://www.youtube.com/embed/EdrU_4K9e6M" 
+                    title="Prestasi 1" allowfullscreen>
+                </iframe>
+            </div>
 
+            <input type="radio" name="video" id="video2">
+            <div class="video-container">
+                <iframe class="w-full h-[500px] lg:h-[600px]" 
+                    src="https://www.youtube.com/embed/UwVau7nlWGs" 
+                    title="Prestasi 2" allowfullscreen>
+                </iframe>
+            </div>
+
+            <input type="radio" name="video" id="video3">
+            <div class="video-container">
+                <iframe class="w-full h-[500px] lg:h-[600px]" 
+                    src="https://www.youtube.com/embed/M3XQ_uAymmA" 
+                    title="Prestasi 3" allowfullscreen>
+                </iframe>
+            </div>
+
+            <input type="radio" name="video" id="video4">
+            <div class="video-container">
+                <iframe class="w-full h-[500px] lg:h-[600px]" 
+                    src="https://www.youtube.com/embed/MA85u2UL39Y" 
+                    title="Prestasi 4" allowfullscreen>
+                </iframe>
+            </div>
+
+            <input type="radio" name="video" id="video5">
+            <div class="video-container">
+                <iframe class="w-full h-[500px] lg:h-[600px]" 
+                    src="https://www.youtube.com/embed/N04giqDZzdM" 
+                    title="Prestasi 5" allowfullscreen>
+                </iframe>
+            </div>
+        </div>
 
         <!-- Prestasi Section -->
         <div class="w-full lg:w-1/4 bg-gray-200 p-4">
             <ul class="space-y-2">
-                <li class="bg-white p-2 rounded-lg shadow">Prestasi 1</li>
-                <li class="bg-white p-2 rounded-lg shadow">Prestasi 2</li>
-                <li class="bg-white p-2 rounded-lg shadow">Prestasi 3</li>
-                <li class="bg-white p-2 rounded-lg shadow">Prestasi 4</li>
-                <li class="bg-white p-2 rounded-lg shadow">Prestasi 5</li>
-                
+                <li><label for="video1" class="block bg-white p-2 rounded-lg shadow hover:bg-gray-300 transition cursor-pointer">Prestasi 1</label></li>
+                <li><label for="video2" class="block bg-white p-2 rounded-lg shadow hover:bg-gray-300 transition cursor-pointer">Prestasi 2</label></li>
+                <li><label for="video3" class="block bg-white p-2 rounded-lg shadow hover:bg-gray-300 transition cursor-pointer">Prestasi 3</label></li>
+                <li><label for="video4" class="block bg-white p-2 rounded-lg shadow hover:bg-gray-300 transition cursor-pointer">Prestasi 4</label></li>
+                <li><label for="video5" class="block bg-white p-2 rounded-lg shadow hover:bg-gray-300 transition cursor-pointer">Prestasi 5</label></li>
             </ul>
         </div>
+
     </div>
 
     <!-- Footer -->
@@ -47,6 +96,7 @@
             Selamat Datang di Website Prestasi Moklet! 🔥 Lihat berbagai prestasi terbaru dari siswa terbaik kami!
         </marquee>
     </footer>
+
 </body>
 
 </html>
